[gd_scene load_steps=11 format=4 uid="uid://bft0jn4kk1ef"]

[ext_resource type="TileSet" uid="uid://b8eua1s7i5kje" path="res://data/game_tile_set.tres" id="1_f1gr3"]
[ext_resource type="Script" uid="uid://cdx7cim3xpva3" path="res://script/level_3.gd" id="1_tebdq"]
[ext_resource type="PackedScene" uid="uid://c8ikp4l0mauav" path="res://scene/player.tscn" id="3_tvhc2"]
[ext_resource type="PackedScene" uid="uid://ml1xew1koqol" path="res://scene/block.tscn" id="4_bnhad"]
[ext_resource type="PackedScene" uid="uid://cyj2esctp8k8s" path="res://scene/button.tscn" id="5_d2622"]
[ext_resource type="PackedScene" uid="uid://c6cbvc1mytntg" path="res://scene/key.tscn" id="6_s8ohv"]
[ext_resource type="Script" uid="uid://3wue0yeump1n" path="res://script/door.gd" id="7_mnx0j"]
[ext_resource type="Texture2D" uid="uid://d3g0or5flkxt6" path="res://assets/door.png" id="8_7ev5u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7qj5"]
size = Vector2(15, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_owe0h"]
radius = 447.219

[node name="level_3" type="Node2D"]
script = ExtResource("1_tebdq")

[node name="button" parent="." instance=ExtResource("5_d2622")]
position = Vector2(-280, 88)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD1/wYAAQADAAAAAAABAAYAAQACAAAAAAAAAAYAAQACAAAAAAD//wYAAQACAAAAAAD+/wYAAQACAAAAAAD9/wYAAQACAAAAAAD8/wYAAQACAAAAAAD7/wYAAQACAAAAAAD6/wYAAQACAAAAAAAKAPz/AQABAAEAAAAKAP3/AQABAAEAAAAKAP7/AQABAAEAAAAKAP//AQABAAEAAAAKAAAAAQABAAEAAAAKAAEAAQABAAEAAAAKAAIAAQABAAEAAAAKAAMAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQABAAEAAAAKAAYAAQACAAEAAAD5/wYAAQABAAAAAAD1/wcAAQADAAEAAAD1/wgAAQADAAEAAAD1/wkAAQACAAEAAAD2/wkAAQACAAAAAAD3/wkAAQACAAAAAAD4/wkAAQACAAAAAAD5/wkAAQACAAEAAAD5/wgAAQABAAEAAAD5/wcAAQABAAEAAAACAAYAAQACAAAAAAADAAYAAQACAAAAAAAEAAYAAQACAAAAAAAFAAYAAQACAAAAAAAGAAYAAQACAAAAAAAHAAYAAQACAAAAAAAIAAYAAQACAAAAAAAJAAYAAQACAAAAAAD0/wYAAQACAAAAAADz/wYAAQACAAAAAADy/wYAAQACAAEAAADx/wYAAQACAAEAAADw/wYAAQACAAAAAADv/wYAAQACAAAAAADu/wYAAQACAAAAAADt/wYAAQACAAEAAADt//z/AQADAAEAAADt//3/AQADAAEAAADt//7/AQADAAEAAADt////AQADAAEAAADt/wMAAQADAAEAAADt/wQAAQADAAEAAADt/wUAAQADAAEAAADt/wIAAQADAAEAAADt/wEAAQADAAEAAADt/wAAAQADAAEAAADt//v/AQADAAEAAAAKAPv/AQABAAEAAADt//f/AQACAAEAAADt//j/AQADAAEAAADt//n/AQADAAEAAADt//r/AQADAAEAAAAKAPf/AQACAAEAAAAJAPf/AQACAAIAAAAIAPf/AQACAAIAAAAHAPf/AQACAAIAAAAGAPf/AQACAAIAAAAFAPf/AQACAAIAAAAEAPf/AQACAAIAAAADAPf/AQACAAIAAAACAPf/AQACAAIAAAABAPf/AQACAAIAAAAAAPf/AQACAAIAAAD///f/AQACAAIAAAD+//f/AQACAAIAAAD9//f/AQACAAIAAAD8//f/AQACAAIAAAD7//f/AQACAAIAAAD6//f/AQACAAIAAAD5//f/AQACAAIAAAD4//f/AQACAAIAAAD3//f/AQACAAIAAAD2//f/AQACAAIAAAD1//f/AQACAAIAAAD0//f/AQACAAIAAADz//f/AQACAAIAAADy//f/AQACAAIAAADx//f/AQACAAIAAADw//f/AQACAAIAAADv//f/AQACAAIAAADu//f/AQACAAIAAAAKAPr/AQABAAEAAAAKAPn/AQABAAEAAAAKAPj/AQABAAEAAADx/wUAAQABAAEAAADx/wQAAQABAAEAAADx/wMAAQABAAEAAADx/wIAAQABAAAAAADy/wUAAQADAAEAAADy/wQAAQADAAEAAADy/wMAAQADAAEAAADy/wIAAQADAAAAAAD0/wcAAQACAAEAAADz/wcAAQACAAEAAADy/wcAAQACAAEAAADx/wcAAQACAAEAAADw/wcAAQACAAEAAADv/wcAAQACAAEAAADu/wcAAQACAAEAAADt/wcAAQACAAEAAAD0/wkAAQACAAEAAAD0/wgAAQACAAEAAAD5/woAAQACAAIAAAD4/woAAQACAAIAAAD3/woAAQACAAIAAAD2/woAAQACAAIAAAD1/woAAQACAAIAAAD0/woAAQACAAIAAAD6/wcAAQACAAEAAAD6/wgAAQACAAEAAAD6/woAAQACAAIAAAD6/wkAAQACAAEAAAAKAAcAAQACAAEAAAAJAAcAAQACAAEAAAAIAAcAAQACAAEAAAAHAAcAAQACAAEAAAAGAAcAAQACAAEAAAAFAAcAAQACAAEAAAAEAAcAAQACAAEAAAADAAcAAQACAAEAAAACAAcAAQACAAEAAAABAAcAAQACAAEAAAAAAAcAAQACAAEAAAD//wcAAQACAAEAAAD+/wcAAQACAAEAAAD9/wcAAQACAAEAAAD8/wcAAQACAAEAAAD7/wcAAQACAAEAAAALAAYAAQACAAEAAAALAAUAAQACAAEAAAALAAQAAQACAAEAAAALAAMAAQACAAEAAAALAAIAAQACAAEAAAALAAEAAQACAAEAAAALAAAAAQACAAEAAAALAP//AQACAAEAAAALAP7/AQACAAEAAAALAP3/AQACAAEAAAALAPz/AQACAAEAAAALAPv/AQACAAEAAAALAPr/AQACAAEAAAALAPn/AQACAAEAAAALAPj/AQACAAEAAAALAPf/AQACAAEAAAALAPb/AQACAAEAAAAKAPb/AQACAAEAAAAJAPb/AQACAAEAAAAIAPb/AQACAAEAAAAHAPb/AQACAAEAAAAGAPb/AQACAAEAAAAFAPb/AQACAAEAAAAEAPb/AQACAAEAAAADAPb/AQACAAEAAAACAPb/AQACAAEAAAABAPb/AQACAAEAAAAAAPb/AQACAAEAAAD///b/AQACAAEAAAD+//b/AQACAAEAAAD9//b/AQACAAEAAAD8//b/AQACAAEAAAD7//b/AQACAAEAAAD6//b/AQACAAEAAAD5//b/AQACAAEAAAD4//b/AQACAAEAAAD3//b/AQACAAEAAAD2//b/AQACAAEAAAD1//b/AQACAAEAAAD0//b/AQACAAEAAADz//b/AQACAAEAAADy//b/AQACAAEAAADx//b/AQACAAEAAADw//b/AQACAAEAAADv//b/AQACAAEAAADu//b/AQACAAEAAADt//b/AQACAAEAAADs/wcAAQACAAEAAADs/wYAAQACAAEAAADs/wUAAQACAAEAAADs/wQAAQACAAEAAADs/wMAAQACAAEAAADs/wIAAQACAAEAAADs/wEAAQACAAEAAADs/wAAAQACAAEAAADs////AQACAAEAAADs//7/AQACAAEAAADs//3/AQACAAEAAADs//z/AQACAAEAAADs//v/AQACAAEAAADs//r/AQACAAEAAADs//n/AQACAAEAAADs//j/AQACAAEAAADs//f/AQACAAEAAADs//b/AQACAAEAAADz/woAAQACAAIAAADz/wkAAQACAAEAAADz/wgAAQACAAEAAADy/woAAQACAAIAAADy/wkAAQACAAEAAADy/wgAAQACAAEAAADx/woAAQACAAIAAADx/wkAAQACAAEAAADx/wgAAQACAAEAAADw/woAAQACAAIAAADw/wkAAQACAAEAAADw/wgAAQACAAEAAADv/woAAQACAAIAAADv/wkAAQACAAEAAADv/wgAAQACAAEAAADu/woAAQACAAIAAADu/wkAAQACAAEAAADu/wgAAQACAAEAAADt/woAAQACAAIAAADt/wkAAQACAAEAAADt/wgAAQACAAEAAADs/woAAQACAAIAAADs/wkAAQACAAEAAADs/wgAAQACAAEAAAALAAoAAQACAAIAAAAKAAoAAQACAAIAAAAKAAkAAQACAAEAAAAKAAgAAQACAAEAAAAJAAoAAQACAAIAAAAJAAkAAQACAAEAAAAJAAgAAQACAAEAAAAIAAoAAQACAAIAAAAIAAkAAQACAAEAAAAIAAgAAQACAAEAAAAHAAoAAQACAAIAAAAHAAkAAQACAAEAAAAHAAgAAQACAAEAAAAGAAoAAQACAAIAAAAGAAkAAQACAAEAAAAGAAgAAQACAAEAAAAFAAoAAQACAAIAAAAFAAkAAQACAAEAAAAFAAgAAQACAAEAAAAEAAoAAQACAAIAAAAEAAkAAQACAAEAAAAEAAgAAQACAAEAAAADAAoAAQACAAIAAAADAAkAAQACAAEAAAADAAgAAQACAAEAAAACAAoAAQACAAIAAAACAAkAAQACAAEAAAACAAgAAQACAAEAAAABAAoAAQACAAIAAAABAAkAAQACAAEAAAABAAgAAQACAAEAAAAAAAoAAQACAAIAAAAAAAkAAQACAAEAAAAAAAgAAQACAAEAAAD//woAAQACAAIAAAD//wkAAQACAAEAAAD//wgAAQACAAEAAAD+/woAAQACAAIAAAD+/wkAAQACAAEAAAD+/wgAAQACAAEAAAD9/woAAQACAAIAAAD9/wkAAQACAAEAAAD9/wgAAQACAAEAAAD8/woAAQACAAIAAAD8/wkAAQACAAEAAAD8/wgAAQACAAEAAAD7/woAAQACAAIAAAD7/wkAAQACAAEAAAD7/wgAAQACAAEAAADs//X/AQACAAAAAADr/wkAAQABAAEAAADr/wgAAQABAAEAAADr/wcAAQABAAEAAADr/wYAAQABAAEAAADr/wUAAQABAAEAAADr/wQAAQABAAEAAADr/wMAAQABAAEAAADr/wIAAQABAAEAAADr/wEAAQABAAEAAADr/wAAAQABAAEAAADr////AQABAAEAAADr//7/AQABAAEAAADr//3/AQABAAEAAADr//z/AQABAAEAAADr//v/AQABAAEAAADr//r/AQABAAEAAADr//n/AQABAAEAAADr//j/AQABAAEAAADr//f/AQABAAEAAADr//b/AQABAAEAAADr//X/AQABAAAAAADr/woAAQABAAIAAAALAPX/AQACAAAAAAAKAPX/AQACAAAAAAAJAPX/AQACAAAAAAAIAPX/AQACAAAAAAAHAPX/AQACAAAAAAAGAPX/AQACAAAAAAAFAPX/AQACAAAAAAAEAPX/AQACAAAAAAADAPX/AQACAAAAAAACAPX/AQACAAAAAAABAPX/AQACAAAAAAAAAPX/AQACAAAAAAD///X/AQACAAAAAAD+//X/AQACAAAAAAD9//X/AQACAAAAAAD8//X/AQACAAAAAAD7//X/AQACAAAAAAD6//X/AQACAAAAAAD5//X/AQACAAAAAAD4//X/AQACAAAAAAD3//X/AQACAAAAAAD2//X/AQACAAAAAAD1//X/AQACAAAAAAD0//X/AQACAAAAAADz//X/AQACAAAAAADy//X/AQACAAAAAADx//X/AQACAAAAAADw//X/AQACAAAAAADv//X/AQACAAAAAADu//X/AQACAAAAAADt//X/AQACAAAAAAAMAAoAAQADAAIAAAAMAAkAAQADAAEAAAAMAAgAAQADAAEAAAAMAAcAAQADAAEAAAAMAAYAAQADAAEAAAAMAAUAAQADAAEAAAAMAAQAAQADAAEAAAAMAAMAAQADAAEAAAAMAAIAAQADAAEAAAAMAAEAAQADAAEAAAAMAAAAAQADAAEAAAAMAP//AQADAAEAAAAMAP7/AQADAAEAAAAMAP3/AQADAAEAAAAMAPz/AQADAAEAAAAMAPv/AQADAAEAAAAMAPr/AQADAAEAAAAMAPn/AQADAAEAAAAMAPj/AQADAAEAAAAMAPf/AQADAAEAAAAMAPb/AQADAAEAAAAMAPX/AQADAAAAAAALAAkAAQACAAEAAAALAAgAAQACAAEAAAALAAcAAQACAAEAAAA=")
tile_set = ExtResource("1_f1gr3")

[node name="player" parent="." instance=ExtResource("3_tvhc2")]
position = Vector2(-255, 80)

[node name="block" parent="." instance=ExtResource("4_bnhad")]
position = Vector2(134, 81)

[node name="key" parent="." instance=ExtResource("6_s8ohv")]
position = Vector2(-137, 130)

[node name="door" type="Node2D" parent="."]
position = Vector2(-42, 132)
rotation = 1.5708
script = ExtResource("7_mnx0j")
state = 1

[node name="Sprite2D" type="Sprite2D" parent="door"]
position = Vector2(0.5, 0)
scale = Vector2(0.9375, 1)
texture = ExtResource("8_7ev5u")

[node name="StaticBody2D" type="StaticBody2D" parent="door"]
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="door/StaticBody2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_i7qj5")

[node name="out_of_bounds" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="out_of_bounds"]
shape = SubResource("CircleShape2D_owe0h")

[node name="Label" type="Label" parent="."]
offset_left = -285.0
offset_top = -23.0
offset_right = -108.0
text = "Buttons can open door"

[connection signal="is_not_pressed" from="button" to="." method="_on_button_is_not_pressed"]
[connection signal="is_pressed" from="button" to="." method="_on_button_is_pressed"]
[connection signal="solved" from="key" to="." method="_on_key_solved"]
[connection signal="body_exited" from="out_of_bounds" to="." method="_on_out_of_bounds_body_exited"]
